Fix CORS for production: allow dynamic frontend URL, OPTIONS method, and global paths