@@ -3,6 +3,7 @@ package com.example.RememberBirthdays.Config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -17,35 +18,38 @@ import java.util.*;
 @Configuration
 public class SecurityConfig {
 
-        @Value("${frontend.url}")
-        private String frontendUrl;
+    @Value("${frontend.url}")
+    private String frontendUrl;
 
-
-        @Bean
-        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-                http
-                 .csrf(csrf -> csrf
-                        .ignoringRequestMatchers("/api/user") // disable CSRF for this endpoint
-                )
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // Enable CORS
+                .cors(cors -> cors.configurationSource(corsConfiguration()))
+                // Disable CSRF for specific endpoint
+                .csrf(csrf -> csrf.ignoringRequestMatchers("/api/user"))
                 .authorizeHttpRequests(auth -> auth
-                                .requestMatchers("/api/admin/**").hasRole("Admin")
-                                .requestMatchers("/api/user").permitAll()
-                    .anyRequest().authenticated()
-                    )
-                        .oauth2ResourceServer(oauth2 -> oauth2
-                                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
-                        );
-                    http.cors(cors -> cors.configurationSource(corsConfiguration()));
-                    return http.build();
-        }
+                        // Allow preflight OPTIONS requests
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // Admin endpoints
+                        .requestMatchers("/api/admin/**").hasRole("Admin")
+                        // Public endpoints
+                        .requestMatchers("/api/user").permitAll()
+                        // All other endpoints require authentication
+                        .anyRequest().authenticated()
+                )
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+                );
 
+        return http.build();
+    }
 
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
         converter.setJwtGrantedAuthoritiesConverter(jwt -> {
             Collection<GrantedAuthority> authorities = new ArrayList<>();
-
             Map<String, Object> realmAccess = jwt.getClaim("realm_access");
             if (realmAccess != null && realmAccess.containsKey("roles")) {
                 List<String> roles = (List<String>) realmAccess.get("roles");
@@ -56,19 +60,16 @@ public class SecurityConfig {
         return converter;
     }
 
-        @Bean
-        public CorsConfigurationSource corsConfiguration(){
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of(frontendUrl));
-                configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT","DELETE"));
-                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-                configuration.setAllowCredentials((true));
+    @Bean
+    public CorsConfigurationSource corsConfiguration() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of(frontendUrl)); // Dynamic frontend URL
+        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS")); // Include OPTIONS
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowCredentials(true);
 
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/api/**",configuration);
-                return source;
-        }
-
-
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration); // Apply globally
+        return source;
+    }
 }
